--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://user-workflow-11.herokuapp.com"
+  "proxy": "http://localhost:5000"
 }
